varasm.c (assemble_visibility): Strip name encoding.
	* varasm.c (assemble_visibility): Strip name encoding.

	* gcc.dg/ia64-visibility-2.c: New test.

From-SVN: r55953

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-01  Jakub Jelinek  <jakub@redhat.com>
+
+	* varasm.c (assemble_visibility): Strip name encoding.
+
 2002-08-01  Ian Dall  <ian@sibyl.beware.dropbear.id.au>
 
 	* config/ns32k/ns32k.h (TARGET_IEEE_COMPARE): Correct earlier patch.
