--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-01  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/ia64-visibility-2.c: New test.
+
 2002-08-01  Benjamin Kosnik   <bkoz@redhat.com>
 
         * g++.old-deja/g++.abi/ptrflags.C (expect): Change
