--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-01  Richard Henderson  <rth@redhat.com>
+
+	* integrate.c (copy_rtx_and_substitute): Squash MEM_EXPR when it
+	refers to a subroutine parameter.
+
 2002-08-01  Jakub Jelinek  <jakub@redhat.com>
 
 	* varasm.c (assemble_visibility): Strip name encoding.
