--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,16 @@
+2002-08-01  H.J. Lu <hjl@gnu.org>
+	    Richard Henderson  <rth@redhat.com>
+
+	* output.h (DECL_READONLY_SECTION): Remove.
+	(decl_readonly_section): Declare.
+	* varasm.c (decl_readonly_section): New.
+	(default_section_type_flags, default_select_section): Use it.
+	* config/arm/pe.c (arm_pe_unique_section): Likewise.
+	* config/i386/interix.c (i386_pe_unique_section): Likewise.
+	* config/i386/winnt.c (i386_pe_unique_section): Likewise.
+	* config/mcore/mcore.c (mcore_unique_section): Likewise.
+	* config/mips/mips.c (mips_unique_section): Likewise.
+
 2002-08-01  Richard Henderson  <rth@redhat.com>
 
 	* integrate.c (copy_rtx_and_substitute): Squash MEM_EXPR when it
