--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2002-08-01  Richard Henderson  <rth@redhat.com>
+
+	* toplev.c (parse_options_and_default_flags): Don't set 
+	flag_reorder_blocks for -Os.
+
+	* config/avr/avr.c (avr_optimization_options): Remove.
+	* config/avr/avr.h (OPTIMIZATION_OPTIONS): Remove.
+	* config/m68hc11/m68hc11.c (m68hc11_optimization_options): Remove.
+	* config/m68hc11/m68hc11.h (OPTIMIZATION_OPTIONS): Remove.
+
 2002-08-01  H.J. Lu <hjl@gnu.org>
 	    Richard Henderson  <rth@redhat.com>
 
