--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-01  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
+
+	* c-common.c (cb_register_builtins): Always define __GXX_ABI_VERSION.
+
 2002-08-01  Richard Henderson  <rth@redhat.com>
 
 	* toplev.c (parse_options_and_default_flags): Don't set 
