--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-02  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/rs6000/rs6000.c (output_toc): Don't use lshift_double when
+	HOST_BITS_PER_WIDE_INT == 64.
+
 2002-08-01  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* df.c (df_insn_table_realloc): Change parameter to unsigned.
