--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2002-08-02  Alan Modra  <amodra@bigpond.net.au>
 
+	* config/rs6000/linux64.h (DBX_OUTPUT_BRAC): Define.
+	(DBX_OUTPUT_LBRAC, DBX_OUTPUT_RBRAC): Define.
+
 	* config/rs6000/rs6000.c (output_toc): Don't use lshift_double when
 	HOST_BITS_PER_WIDE_INT == 64.
 
