--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-01  Daniel Jacobowitz  <drow@mvista.com>
+
+	* Makefile.in ($(BUILD_PREFIX_1)ggc-none.o): Use $(GGC_H).
+
 2002-08-01  Chris Demetriou  <cgd@broadcom.com>
 
 	* config.gcc (mipsisa64sb1-*-elf*): New configuration.
