--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-02  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/rs6000/rs6000.c (output_cbranch): Hint differently for power4.
+
 2002-08-01  Daniel Jacobowitz  <drow@mvista.com>
 
 	* Makefile.in ($(BUILD_PREFIX_1)ggc-none.o): Use $(GGC_H).
