--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -3,7 +3,7 @@
 
 	* ginclude/stddef.h (_BSD_SIZE_T_DEFINED_): Define if not defined,
 	plays nice with Darwin headers.
-	(_BSD_RUNE_T_DEFINED_): Likewise. (from Andr
+	(_BSD_RUNE_T_DEFINED_): Likewise.
 
 2002-08-01  Zack Weinberg  <zack@codesourcery.com>
 
