* gdbinit.in (pct): New macro.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55979 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-02  Jason Merrill  <jason@redhat.com>
+
+	* gdbinit.in (pct): New macro.
+
 2002-08-01  Stan Shebs  <shebs@apple.com>
 	    Andreas Tobler  <toa@pop.agri.ch>
 
