--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-08-02  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	* simplify-rtx.c (simplify_binary_operation): x * 1 is allowed
+	when not honoring signalling NaNs.
+	(simplify_ternary_operation): a == b has a definite value
+	when not honoring NaNs.
+
 2002-08-02  Jason Merrill  <jason@redhat.com>
 
 	* gdbinit.in (pct): New macro.
