* Makefile.in (ra-debug.o): Depend on $(TM_P_H). 	* ra-debug.c: Include "tm_p.h". 	* ra-rewrite.c (is_partly_live_1): Change return type to bool.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55981 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-02  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* Makefile.in (ra-debug.o): Depend on $(TM_P_H).
+	* ra-debug.c: Include "tm_p.h".
+	* ra-rewrite.c (is_partly_live_1): Change return type to bool.
+
 2002-08-02  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	* simplify-rtx.c (simplify_binary_operation): x * 1 is allowed
