--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-02  Jason Merrill  <jason@redhat.com>
+
+	* semantics.c (expand_body): Do tree optimization in the function
+	context, too.
+
 2002-08-01  Neil Booth  <neil@daikokuya.co.uk>
 
 	* cp-tree.h: Move all warning and flag declarations to c-common.h.
