--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2002-08-02  Jason Merrill  <jason@redhat.com>
+
+	* langhooks-def.h (LANG_HOOKS_EXPR_SIZE): New macro.
+	* langhooks.c (lhd_expr_size): Define default.
+	* langhooks.h (struct lang_hooks): Add expr_size.
+	* explow.c (expr_size): Call it.
+	* expr.c (store_expr): Don't copy an expression of size zero.
+	(expand_expr) [CONSTRUCTOR]: Use expr_size to calculate how much
+	to store.
+	* Makefile.in (builtins.o): Depend on langhooks.h.
+
 2002-08-02  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* Makefile.in (ra-debug.o): Depend on $(TM_P_H).
