--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,11 @@
 2002-08-02  Jason Merrill  <jason@redhat.com>
 
+	* cp-lang.c (LANG_HOOKS_EXPR_SIZE): Define.
+	(cp_expr_size): New fn.
+	* call.c (build_over_call): Lose empty class hackery.
+	(convert_arg_to_ellipsis): Promote non-POD warning to error.
+	* typeck.c (build_modify_expr): Don't use save_expr on an lvalue.
+
 	* semantics.c (expand_body): Do tree optimization in the function
 	context, too.
 
