* configure.in (FORBUILD): Use $build_alias.         * configure: Regenerated.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55987 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-02  Daniel Jacobowitz  <drow@mvista.com>
+
+	* configure.in (FORBUILD): Use $build_alias.
+	* configure: Regenerated.
+
 2002-08-02  Richard Sandiford  <rsandifo@redhat.com>
 
 	* config.gcc: Don't include mips/abi64.h in $tm_file.
