--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-02  David Edelsohn  <edelsohn@gnu.org>
+
+	PR optimize/7067
+	* config/rs6000/rs6000.h (RTX_COSTS): Artificially make MULT
+	small if optimizing for size.
+
 2002-08-02  Daniel Jacobowitz  <drow@mvista.com>
 
 	* configure.in (FORBUILD): Use $build_alias.
