--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-02  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* tree.c (build_shared_int_cst): Make cache file scope, and
+	GTY it.
+
 2002-08-02  Jason Merrill  <jason@redhat.com>
 
 	* cp-lang.c (LANG_HOOKS_EXPR_SIZE): Define.
