--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-02  Krister Walfridsson  <cato@df.lth.se>
+
+	* MAINTAINERS (Write After Approval): Add myself.
+
 2002-07-31  Alan Modra  <amodra@bigpond.net.au>
 
 	* configure.in: Move generic linux case to end.	 Copy generic
