--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-08-02  Eric Christopher  <echristo@redhat.com>
+
+	* config.gcc (mips*-*-linux*): Fix ordering of tm_file.
+	* config/mips/mips.h (READONLY_DATA_SECTION_ASM_OP): Change
+	#ifndef to #undef.
+	(TARGET_MEM_FUNCTIONS): Define instead of define to 1.
+
 2002-08-02  David Edelsohn  <edelsohn@gnu.org>
 
 	PR optimize/7067
