--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-02  Mark Mitchell  <mark@codesourcery.com>
+
+	* init.c (build_member_call): Use build_new_method_call, not
+	build_method_call.
+
 2002-08-02  Krister Walfridsson  <cato@df.lth.se>
 
 	* Make-lang.in (spew.o, lex.o, pt.o): Add path to parse.h dependencies.
