--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-02  Mark Mitchell  <mark@codesourcery.com>
+
+	* g++.dg/inherit/access3.C: New test.
+
 2002-08-01  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/ia64-visibility-2.c: New test.
