--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-03  Jason Merrill  <jason@redhat.com>
+
+	* explow.c (int_expr_size): New fn.
+	* expr.c (expand_expr) [CONSTRUCTOR]: Use it.
+	* expr.h: Declare it.
+
 2002-08-02  Krister Walfridsson  <cato@df.lth.se>
 
 	* Makefile.in (gengtype-lex.o, gengtype-yacc.o): Add path to
