* config/rs6000/rs6000.md (movsi_internal1): Add nop mnemonic.         (movhi_internal): Same.         (movqi_internal): Same.         (movdi_internal64): Same.
        * config/rs6000/t-ppccomm (MULTILIB_MATCHES_FLOAT): Add mcpu=405.

        * config/rs6000/xcoff.h (SKIP_ASM_OP): Define.
        (ASM_OUTPUT_SKIP): Use it.  SIZE unsigned.
        (COMMON_ASM_OP): Define.
        (ASM_OUTPUT_ALIGNED_COMMON): Use it.  SIZE unsigned.
        Use ALIGN parameter.
        (LOCAL_COMMON_ASM_OP): Define.
        (ASM_OUTPUT_LOCAL): Use it.  SIZE unsigned.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56011 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -8197,7 +8197,7 @@
    mt%0 %1
    mt%0 %1
    mt%0 %1
-   cror 0,0,0"
+   {cror 0,0,0|nop}"
   [(set_attr "type" "*,*,load,store,*,*,*,*,*,*,mtjmpr,*,*")
    (set_attr "length" "4,4,4,4,4,4,8,4,4,4,4,4,4")])
 
@@ -8250,7 +8250,7 @@
   ""
   "{ rs6000_emit_move (operands[0], operands[1], HImode); DONE; }")
 
-(define_insn ""
+(define_insn "*movhi_internal"
   [(set (match_operand:HI 0 "nonimmediate_operand" "=r,r,m,r,r,*q,*c*l,*h")
 	(match_operand:HI 1 "input_operand" "r,m,r,i,*h,r,r,0"))]
   "gpc_reg_operand (operands[0], HImode)
@@ -8263,7 +8263,7 @@
    mf%1 %0
    mt%0 %1
    mt%0 %1
-   cror 0,0,0"
+   {cror 0,0,0|nop}"
   [(set_attr "type" "*,load,store,*,*,*,mtjmpr,*")])
 
 (define_expand "movqi"
@@ -8272,7 +8272,7 @@
   ""
   "{ rs6000_emit_move (operands[0], operands[1], QImode); DONE; }")
 
-(define_insn ""
+(define_insn "*movqi_internal"
   [(set (match_operand:QI 0 "nonimmediate_operand" "=r,r,m,r,r,*q,*c*l,*h")
 	(match_operand:QI 1 "input_operand" "r,m,r,i,*h,r,r,0"))]
   "gpc_reg_operand (operands[0], QImode)
@@ -8285,7 +8285,7 @@
    mf%1 %0
    mt%0 %1
    mt%0 %1
-   cror 0,0,0"
+   {cror 0,0,0|nop}"
   [(set_attr "type" "*,load,store,*,*,*,mtjmpr,*")])
 
 ;; Here is how to move condition codes around.  When we store CC data in
@@ -8967,7 +8967,7 @@
    stfd%U0%X0 %1,%0
    mf%1 %0
    mt%0 %1
-   cror 0,0,0"
+   {cror 0,0,0|nop}"
   [(set_attr "type" "*,load,store,*,*,*,*,fp,fpload,fpstore,*,mtjmpr,*")
    (set_attr "length" "4,4,4,4,4,20,4,4,4,4,4,4,4")])
 
