--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,20 @@
+2002-08-03  David Edelsohn  <edelsohn@gnu.org>
+
+	* config/rs6000/rs6000.md (movsi_internal1): Add nop mnemonic.
+	(movhi_internal): Same.
+	(movqi_internal): Same.
+	(movdi_internal64): Same.
+
+	* config/rs6000/t-ppccomm (MULTILIB_MATCHES_FLOAT): Add mcpu=405.
+
+	* config/rs6000/xcoff.h (SKIP_ASM_OP): Define.
+	(ASM_OUTPUT_SKIP): Use it.  SIZE unsigned.
+	(COMMON_ASM_OP): Define.
+	(ASM_OUTPUT_ALIGNED_COMMON): Use it.  SIZE unsigned.
+	Use ALIGN parameter.
+	(LOCAL_COMMON_ASM_OP): Define.
+	(ASM_OUTPUT_LOCAL): Use it.  SIZE unsigned.
+
 2002-08-03  Roger Sayle  <roger@eyesopen.com>
 
 	* builtins.def: Define new builtin functions exp, expf, expl,
