--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-03  Roger Sayle  <roger@eyesopen.com>
+
+	* gcc.dg/builtins-1.c: New testcase.
+
 2002-08-02  Mark Mitchell  <mark@codesourcery.com>
 
 	* g++.dg/inherit/access3.C: New test.
