--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-04  Gabriel Dos Reis  <gdr@nerim.net>
+	
+	* diagnostic.c (inform): New function.
+	* diagnostic.h (inform): Declare.
+	
 2002-08-03  David Edelsohn  <edelsohn@gnu.org>
 
 	* config/rs6000/rs6000.md (movsi_internal1): Add nop mnemonic.
