* cp-tree.h (VF_DERIVED_VALUE): Remove. 	* class.c (finish_struct_1): Use VF_BINFO_VALUE not VF_DERIVED_VALUE.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56023 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-04  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* cp-tree.h (VF_DERIVED_VALUE): Remove.
+	* class.c (finish_struct_1): Use VF_BINFO_VALUE not VF_DERIVED_VALUE.
+
 2002-08-03  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR 7470.
