--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-04  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* config/i386/i386.c (x86_field_alignment): Remove duplicate test
+	of TARGET_ALIGN_DOUBLE.
+
 2002-08-04  Gabriel Dos Reis  <gdr@nerim.net>
 	
 	* diagnostic.c (inform): New function.
