gcc-common.texi (version-GCC): Increase to 3.3.
	* doc/include/gcc-common.texi (version-GCC): Increase to 3.3.

java:
	* gcj.texi (version-gcc): Increase to 3.3.

f:
	* root.texi (version-gcc): Increase to 3.3.

From-SVN: r56026

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+Sun Aug  4 16:45:49 2002  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	* root.texi (version-gcc): Increase to 3.3.
+
 2002-07-30  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	* com.c (ffe_init_options): Set
