--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-04  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	* doc/include/gcc-common.texi (version-GCC): Increase to 3.3.
+
 2002-08-04  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* gcc.c (cc1_options): Pass output file as auxbase when
