--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-04  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	* gcj.texi (version-gcc): Increase to 3.3.
+
 2002-07-22  Tom Tromey  <tromey@redhat.com>
 
 	* lex.c (java_lex): Check for `e' or `E' after 0.
