gcc-common.texi (version-GCC): Increase to 3.2.
	* doc/include/gcc-common.texi (version-GCC): Increase to 3.2.

java:
	* gcj.texi (version-gcc): Increase to 3.2.

f:
	* root.texi (version-gcc): Increase to 3.2.

From-SVN: r56027

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+Sun Aug  4 16:48:53 2002  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	* root.texi (version-gcc): Increase to 3.2.
+
 2002-07-25  Release Manager
 
 	* GCC 3.1.1 Released.
