--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-04  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	* doc/include/gcc-common.texi (version-GCC): Increase to 3.2.
+
 2002-08-01  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* gcc.c: Set __GXX_ABI_VERSION to 102.
