--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-04  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	* gcj.texi (version-gcc): Increase to 3.2.
+
 2002-07-25  Release Manager
 
 	* GCC 3.1.1 Released.
