Remove one of the files checked in previously
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56033 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -25,7 +25,9 @@
 	* config/frv/ulltof.c: New file.
 	* config/frv/umodi.c: New file.
 	* config/frv/xm-frv.h: New file.
-		
+
+	* config/frv/media.h: Removed again.
+
 2002-08-04  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* gcov.c (bb_file_time): New static variable.
