--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-04  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	* news.texi: Mention nothing changed for 3.2.
+
 Sun Aug  4 16:48:53 2002  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* root.texi (version-gcc): Increase to 3.2.
