--- a/gcc/f/news.texi
+++ b/gcc/f/news.texi
@@ -10,7 +10,7 @@
 @c in the standalone derivations of this file (e.g. NEWS).
 @set copyrights-news 1995,1996,1997,1998,1999,2000,2001,2002
 
-@set last-update-news 2002-06-30
+@set last-update-news 2002-08-05
 
 @include root.texi
 
@@ -152,6 +152,12 @@ is available at
 @end ifclear
 
 The following information was last updated on @value{last-update-news}:
+
+@heading In @code{GCC} 3.2 versus @code{GCC} 3.1:
+@itemize @bullet
+@item
+Nothing.
+@end itemize
 
 @heading In @code{GCC} 3.1 (formerly known as g77-0.5.27) versus @code{GCC} 3.0:
 @itemize @bullet
