--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,14 @@
+2002-08-04  Geoffrey Keating  <geoffk@redhat.com>
+
+	* class.c: (permanent_obstack): Delete declaration.
+	* constants.c: (permanent_obstack): Delete declaration.
+	* except.c: (permanent_obstack): Delete declaration.
+	* expr.c: (permanent_obstack): Delete declaration.
+	* jcf-parse.c: (permanent_obstack): Delete declaration.
+	(saveable_obstack): Delete declaration.
+	* parse.h: (permanent_obstack): Delete declaration.
+	* typeck.c: (permanent_obstack): Delete declaration.
+
 2002-08-04  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* gcj.texi (version-gcc): Increase to 3.3.
