--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-04  Mark Mitchell  <mark@codesourcery.com>
+
+	* doc/install.texi (Installing GCC): Refer to buildstat.html,
+	rather than listing version-specific build status files.
+
 2002-08-04  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* doc/include/gcc-common.texi (version-GCC): Increase to 3.2.
