--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-04  Gabriel Dos Reis  <gdr@nerim.net>
+
+	Fix PR/2213
+	* cvt.c (cp_convert_to_pointer): Reject conversions from integral
+	expressions to pointer-to-data-member of pointer-to-member-functions.
+
 2002-08-04  Geoffrey Keating  <geoffk@redhat.com>
 
 	* cvt.c (ocp_convert): Delete obsolete code.
