--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-04  Gabriel Dos Reis  <gdr@nerim.net>
+
+	* g++.dg/other/conversion1.C: New test.
+
 2002-08-03  Roger Sayle  <roger@eyesopen.com>
 
 	* gcc.dg/builtins-1.c: New testcase.
