--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-04  Chris Demetriou  <cgd@broadcom.com>
+
+	* doc/invoke.texi: Remove duplicated paragraph describing
+	TARGET_SWITCHES.
+
 2002-08-04  Geoffrey Keating  <geoffk@redhat.com>
 
 	* Makefile.in (sdbout.o): Doesn't need $(OBSTACK_H).
