--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-05  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	* invoke.texi: Improve description of
+	-fno-finite-math-only flag.
+
 Sun Aug  4 16:45:49 2002  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* root.texi (version-gcc): Increase to 3.3.
