--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-05  Gabriel Dos Reis  <gdr@nerim.net>
+
+	* doc/c-tree.texi (Expression trees): Document VA_ARG_EXPR
+
 2002-08-04  Chris Demetriou  <cgd@broadcom.com>
 
 	* doc/invoke.texi: Remove duplicated paragraph describing
