Index: ChangeLog 2002-08-05  Geoffrey Keating  <geoffk@redhat.com>
	* attribs.c: Don't include obstack.h.
	* builtins.c: Likewise.
	* cfganal.c: Likewise.
	* cfgbuild.c: Likewise.
	* cfgcleanup.c: Likewise.
	* emit-rtl.c: Likewise.
	* loop.c: Likewise.
	* stmt.c: Likewise.

Index: cp/ChangeLog
2002-08-05  Geoffrey Keating  <geoffk@redhat.com>

	* class.c: Don't include obstack.h.
	(popclass):
	* decl2.c: Delete bogus comment.
	* error.c: Don't include obstack.h.
	* except.c: Likewise.
	(dump_type): Correct comment.
	* method.c: Don't include obstack.h.
	* tree.c: Likewise.

Index: java/ChangeLog
2002-08-05  Geoffrey Keating  <geoffk@redhat.com>

	* mangle_name.c: Don't include obstack.h twice.
	* xref.c: Don't include obstack.h.

From-SVN: r56055

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,14 @@
+2002-08-05  Geoffrey Keating  <geoffk@redhat.com>
+
+	* class.c: Don't include obstack.h.
+	(popclass): 
+	* decl2.c: Delete bogus comment.
+	* error.c: Don't include obstack.h.
+	* except.c: Likewise.
+	(dump_type): Correct comment.
+	* method.c: Don't include obstack.h.
+	* tree.c: Likewise.
+
 2002-08-04  Gabriel Dos Reis  <gdr@nerim.net>
 
 	Fix PR/2213
