--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-05  Geoffrey Keating  <geoffk@redhat.com>
+
+	* mangle_name.c: Don't include obstack.h twice.
+	* xref.c: Don't include obstack.h.
+
 2002-08-04  Geoffrey Keating  <geoffk@redhat.com>
 
 	* class.c: (permanent_obstack): Delete declaration.
