--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-05  Jakub Jelinek  <jakub@redhat.com>
+
+	* consistency.vlad/layout/endian.c: Include string.h.
+
 2002-08-04  Gabriel Dos Reis  <gdr@nerim.net>
 
 	* g++.dg/other/conversion1.C: New test.
