fold-const.c (associate_trees): Only optimize NEGATE_EXPR in one of the operands into MINUS_EXPR if...
	* fold-const.c (associate_trees): Only optimize NEGATE_EXPR in one
	of the operands into MINUS_EXPR if code is PLUS_EXPR.

	* gcc.c-torture/execute/20020805-1.c: New test.

From-SVN: r56058

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -2,6 +2,8 @@
 
 	* consistency.vlad/layout/endian.c: Include string.h.
 
+	* gcc.c-torture/execute/20020805-1.c: New test.
+
 2002-08-04  Gabriel Dos Reis  <gdr@nerim.net>
 
 	* g++.dg/other/conversion1.C: New test.
