--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-05  Jakub Jelinek  <jakub@redhat.com>
+
+	* fold-const.c (associate_trees): Only optimize NEGATE_EXPR in one
+	of the operands into MINUS_EXPR if code is PLUS_EXPR.
+
 2002-08-05  Douglas B Rupp  <rupp@gnat.com>
 
 	* config.gcc (i[34567]86-*-interix*): Replace interix.o with winnt.o
