gcc: 	* gcov.c (output_data): Round to % to nearest, tweak formatting. testsuite: 	* lib/gcov.exp: Tweak expected line formats. 	* gcc.misc-tests/gcov8.c: New test. 	* gcc.misc-tests/gcov8.x: New flags.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56059 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-05  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* gcov.c (output_data): Round to % to nearest, tweak formatting.
+
 2002-08-05  Jakub Jelinek  <jakub@redhat.com>
 
 	* fold-const.c (associate_trees): Only optimize NEGATE_EXPR in one
