--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-06  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* doc/gcc.texi (Top): Rename Index to Keyword Index.
+
 2002-08-05  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* gcov.c (output_data): Round to % to nearest, tweak formatting.
