--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-06  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* g77.texi (Top): Rename Index to Keyword Index.
+
 2002-08-05  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	* invoke.texi: Improve description of
