* doc/install.texi (Binaries): Update Bull Freeware URL.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56069 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-06  David Edelsohn  <edelsohn@gnu.org>
+
+	* doc/install.texi (Binaries): Update Bull Freeware URL.
+
 2002-08-06  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* doc/gcc.texi (Top): Rename Index to Keyword Index.
